add SCOTU_data_txt_save to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ data_txt_save/
 clean_data_txt_save/
 summaries/
 dataset_legal-pegasus/
+SCOTU_data_txt_save/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
