--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 SCOTUS/
 models/
-data_txt_save/
-clean_data_txt_save/
 summaries/
 dataset_legal-pegasus/
-SCOTU_data_txt_save/
+SCOTUS_data/
 target_analysis/
 
 # Byte-compiled / optimized / DLL files
