--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ summaries/
 dataset_legal-pegasus/
 SCOTU_data_txt_save/
 target_analysis/
+resultats/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
