Update .gitignore to exclude SCOTU_data_txt_save directory

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@ SCOTUS/
 models/
 summaries/
 dataset_legal-pegasus/
-SCOTUS_data/
-target_analysis/
+SCOTU_data_txt_save/
 resultats/
 
 # Byte-compiled / optimized / DLL files
